--- a/src/scss/_components.home.scss
+++ b/src/scss/_components.home.scss
@@ -1,11 +1,122 @@
+.c-home-intro {
+  background: url(/images/dragon-large.png) right top / 50% no-repeat;
+
+  @media screen and (min-width: 48em) {
+    background-position: right center;
+    background-size: contain;
+  }
+}
+
 .c-home-intro h1 {
-  font-size: var(--step-5);
-  font-family: var(--serif);
+  max-width: 60rem;
+}
+
+.c-home-intro h1::after {
+  content: '.';
+  color: var(--hotpink);
 }
 
 .c-home-intro h1 span {
   display: block;
-  font-size: var(--step--1);
+  font-size: var(--size-400);
   font-family: var(--sans-serif);
   font-weight: 400;
+}
+
+.c-home-services ol {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: var(--step-5);
+}
+
+.c-home-services li {
+  position: relative;
+  counter-increment: my-counter;
+}
+
+.c-home-services li::before {
+  content: counter(my-counter);
+  position: absolute;
+  top: -8vw;
+  left: -3.5vw;
+  color: rgba(#ff1493, 0.1);
+  font-size: 18vw;
+  font-family: var(--serif);
+  font-weight: 500;
+  line-height: 1;
+  z-index: -1;
+
+  @media screen and (min-width: 87.5em) {
+    top: -100px;
+    left: -50px;
+    font-size: 250px;
+  }
+}
+
+.c-home-clients ul {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-gap: var(--step-5);
+  align-items: center;
+}
+
+.c-home-clients li {
+  margin-top: 0;
+}
+
+.c-home-about {
+  background: url(/images/bg-tiles.jpg) center / contain no-repeat;
+}
+
+.c-home-about__content {
+  display: flex;
+  flex-wrap: wrap;
+  margin: calc(var(--step-2) * -1);
+}
+
+.c-home-about__content > * {
+  margin: var(--step-2);
+}
+
+.c-home-about__content > h2 {
+  flex-shrink: 0;
+  align-self: start;
+}
+
+.c-home-about__image {
+  position: relative;
+  max-width: 250px;
+}
+
+.c-home-about img {
+  width: 250px;
+  height: 250px;
+  // border-radius: 100%;
+  object-fit: cover;
+  transform: rotate(2deg);
+}
+
+.c-home-about__image::before {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  bottom: -3px;
+  right: -3px;
+  height: 250px;
+  background-color: rgba(#ff1493, 0.15);
+  transform: rotate(-5deg);
+}
+
+.c-home-about__content ul:not([class]) li::before {
+  width: 24px;
+  height: 24px;
+  top: 0.4em;
+  background-size: contain;
+  background-color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='deeppink' fill-opacity='1'%3E%3Cpolygon fill-rule='evenodd' points='8 4 12 6 8 8 6 12 4 8 0 6 4 4 6 0 8 4'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+.c-home-about__content ul:not([class]) li {
+  padding-left: 1.15rem;
 }
