--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,7 +22,7 @@ body {
   background: #cde8e3 url('/images/bg-body.jpg') top / contain no-repeat;
   color: var(--near-black);
   font-family: var(--sans-serif);
-  font-size: var(--step-0);
+  font-size: var(--size-400);
   line-height: var(--line-height-copy);
 }
 
@@ -108,7 +108,7 @@ h4,
 h5,
 h6 {
   font-family: var(--serif);
-  font-size: var(--step-1);
+  font-size: var(--size-500);
   font-weight: 600;
   line-height: var(--line-height-title);
 }
@@ -165,6 +165,10 @@ h6 {
 //  margin-top: 0;
 //  margin-bottom: $s5;
 //}
+strong,
+b {
+  font-weight: 600;
+}
 
 time {
   color: var(--light-grey);
@@ -305,7 +309,7 @@ button {
   background-color: var(--dark);
   color: var(--light);
   font-family: var(--sans-serif);
-  font-size: var(--step--2);
+  font-size: var(--size-200);
   letter-spacing: 1px;
   text-transform: uppercase;
   cursor: pointer;
@@ -368,6 +372,7 @@ button svg {
 // @import "components.code-syntax-highlighting";
 // @import "components.codetitle";
 @import "components.underline";
+@import "components.preline";
 @import "components.cta";
 
 
@@ -491,11 +496,11 @@ button svg {
  width:1px
 }
 
-.display\:none {
-  display: none;
-}
+.display\:none { display: none; }
 
 .center {
   margin-left: auto;
   margin-right: auto;
 }
+
+.overflow\:hidden { overflow: hidden; }
