--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,7 +8,7 @@
     <link rel="alternate" href="/feed/writing.xml" title="Matthew Passmore's writing" type="application/atom+xml">
 
     <link
-    href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,600|Source+Sans+Pro:400,400i,600,700&display=swap" rel="stylesheet">
+    href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,500,600|Source+Sans+Pro:400,400i,600,700&display=swap" rel="stylesheet">
     <style>{% include 'css/main.css' %}</style>
 
     <!-- DETECT JS -->
@@ -28,8 +28,8 @@
 
           <!-- NAVIGATION -->
           <nav class="c-siteheader__nav">
-            <ul class="list-reset max-w-none text-300">
-              <li class="font-serif font-semibold">
+            <ul class="list-reset max-w-none">
+              <li class="font-serif font-semibold text-600">
                 <a class="c-underline" href="/contact/">
                   Let's talk
                   <svg class="text-hotpink"><use xlink:href="#icon-chat"></use></svg>
@@ -42,7 +42,7 @@
           </nav>
 
           <!-- INTRO -->
-          <div class="[ c-siteheader__intro ] [ max-w-short ]">
+          <div class="[ c-siteheader__intro ] [ max-w-short ] [ text-500 ]">
             {{ site.intro | markdownFilter | safe }}
           </div><!-- .c-siteheader__intro -->
           
@@ -60,26 +60,26 @@
 
 
       <!-- CALL-TO-ACTION -->
-      <aside class="[ c-cta ] [ max-w-short center mt-900 py-400 ]">
-        <h3 class="[ c-cta__heading ] [ text-600 ]">{{ site.cta.heading }}</h3> 
-        <div class="[ c-cta__subheading ] [ mt-0 ] [ text-500 ]">
+      <aside class="[ c-cta ] [ max-w-short center mt-1000 py-400 ]">
+        <h3 class="[ c-cta__heading ] [ text-700 ]">{{ site.cta.heading }}</h3> 
+        <div class="[ c-cta__subheading ] [ mt-0 ] [ text-600 ]">
           {{ site.cta.subheading | markdownFilter | safe }} 
         </div><!-- .c-cta__subheading -->
-        <a class="[ c-underline ] [ mt-300 ] [ font-serif font-semibold text-500 ]" href="{{ site.cta.linkTarget }}">{{ site.cta.linkText }}</a>
+        <a class="[ c-underline ] [ mt-300 ] [ font-serif font-semibold text-600 ]" href="{{ site.cta.linkTarget }}">{{ site.cta.linkText }}</a>
       </aside>
 
 
       <!-- FOOTER -->
       <footer class="[ c-sitefooter ] [ mt-900 ]">
         <div class="[ c-sitefooter__nav ] [ o-full-bleed ] ">
-          <ul class="[ list-reset max-w-none ] [ text-300 font-semibold ]">
+          <ul class="[ list-reset max-w-none ] [ font-semibold ]">
             <li><a href="#about">About</a></li>
             <li><a href="/contact/">Contact</a></li>
             <li><a href="/notes/">Writing</a></li>
             <li><a href="/feed/writing.xml">RSS</a></li>
           </ul>
         </div><!-- .c-sitefooter__nav -->
-        <div class="[ c-sitefooter__location ] [ mt-400 ] [ text-300 font-serif italic ]">
+        <div class="[ c-sitefooter__location ] [ mt-400 ] [ font-serif italic ]">
           <span>Made with love</span> 
           <span>&nbsp;in Cardiff, Wales</span>
           <img src="/images/dragon.png" width="109" height="72" alt="The Welsh Dragon, a heraldic symbol that appears on the national flag of Wales.">
