--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -3,12 +3,12 @@ layout: layouts/base.njk
 ---
 
 <article class="c-post">
-  <header>
-    <h1>{{ title }}</h1>
+  <header class="max-w-long mx-auto">
+    <h1 class="[ c-preline ] [ text-700 ]">{{ title }}</h1>
     <time datetime="{{ date | w3DateFilter }}">{{ date | dateFilter }}</time>
-    <div class="c-post__tags">
-      <p>Posted in&nbsp;&mdash;&nbsp;</p>
-      <div class="o-cluster">
+    <div class="[ c-post__tags ] [ mt-300 ]">
+      <p class="italic">Posted in&nbsp;&mdash;&nbsp;</p>
+      <div class="[ o-cluster ] [ mt-0 ]">
         <ul class="list-reset">
           {% for tag in noteTags %}<li><a class="c-tag" href="/notes/tags/{{ tag | slug }}"><i>#</i>{{ tag }}</a></li>{% endfor %}
           {% for tag in linkTags %}<li><a class="c-tag" href="/links/tags/{{ tag | slug }}"><i>#</i>{{ tag }}</a></li>{% endfor %}
@@ -16,7 +16,7 @@ layout: layouts/base.njk
       </div>
     </div>
   </header>
-  <div>
+  <div class="max-w-long mt-900 mx-auto">
     {{ content | safe }}
-  </div><!-- .o-stack -->
+  </div>
 </article>
