--- a/src/scss/_components.tag.scss
+++ b/src/scss/_components.tag.scss
@@ -1,10 +1,4 @@
-.c-tag {
-  display: inline-block;
-  font-size: var(--step--2);
-  font-family: var(--mono);
-}
-
-.c-tag::first-letter {
+.c-tag i {
   color: var(--tertiary-color);
   font-style: normal;
 }
