--- a/src/scss/_tokens.scss
+++ b/src/scss/_tokens.scss
@@ -1,71 +1,3 @@
-.bg-transparent {
-  background-color: transparent
-}
-
-.bg-black {
-  background-color: var(--black)
-}
-
-.bg-white {
-  background-color: var(--white)
-}
-
-.bg-primary {
-  background-color: var(--primary-color)
-}
-
-.bg-secondary {
-  background-color: var(--secondary-color)
-}
-
-.bg-tertiary {
-  background-color: var(--tertiary-color)
-}
-
-.bg-cyan {
-  background-color: var(--cyan)
-}
-
-.bg-hotpink {
-  background-color: var(--hotpink)
-}
-
-.bg-grey-100 {
-  background-color: var(--grey-100)
-}
-
-.bg-grey-200 {
-  background-color: var(--grey-200)
-}
-
-.bg-grey-300 {
-  background-color: var(--grey-300)
-}
-
-.bg-grey-400 {
-  background-color: var(--grey-400)
-}
-
-.bg-grey-500 {
-  background-color: var(--grey-500)
-}
-
-.bg-grey-600 {
-  background-color: var(--grey-600)
-}
-
-.bg-grey-700 {
-  background-color: var(--grey-700)
-}
-
-.bg-grey-800 {
-  background-color: var(--grey-800)
-}
-
-.bg-grey-900 {
-  background-color: var(--grey-900)
-}
-
 .font-sans {
   font-family: var(--sans-serif)
 }
@@ -130,18 +62,6 @@
   font-style: normal
 }
 
-.font-hairline {
-  font-weight: 100
-}
-
-.font-thin {
-  font-weight: 200
-}
-
-.font-light {
-  font-weight: 300
-}
-
 .font-normal {
   font-weight: 400
 }
@@ -158,68 +78,16 @@
   font-weight: 700
 }
 
-.font-extrabold {
-  font-weight: 800
-}
-
-.font-black {
-  font-weight: 900
-}
-
-.leading-3 {
-  line-height: .75rem
-}
-
-.leading-4 {
-  line-height: 1rem
-}
-
-.leading-5 {
-  line-height: 1.25rem
-}
-
-.leading-6 {
-  line-height: 1.5rem
-}
-
-.leading-7 {
-  line-height: 1.75rem
-}
-
-.leading-8 {
-  line-height: 2rem
-}
-
-.leading-9 {
-  line-height: 2.25rem
-}
-
-.leading-10 {
-  line-height: 2.5rem
-}
-
-.leading-none {
-  line-height: 1
-}
-
 .leading-tight {
-  line-height: 1.25
+  line-height: var(--line-height-tight)
 }
 
-.leading-snug {
-  line-height: 1.375
-}
-
-.leading-normal {
-  line-height: 1.5
-}
-
-.leading-relaxed {
-  line-height: 1.625
+.leading-mid {
+  line-height: var(--line-height-mid)
 }
 
 .leading-loose {
-  line-height: 2
+  line-height: var(--line-height-loose)
 }
 
 .m-0 {
@@ -268,46 +136,6 @@
 
 .m-auto {
   margin: auto
-}
-
-.-m-100 {
-  margin: calc(var(--step--3) * -1)
-}
-
-.-m-200 {
-  margin: calc(var(--step--2) * -1)
-}
-
-.-m-300 {
-  margin: calc(var(--step--1) * -1)
-}
-
-.-m-400 {
-  margin: calc(var(--step-0) * -1)
-}
-
-.-m-500 {
-  margin: calc(var(--step-1) * -1)
-}
-
-.-m-600 {
-  margin: calc(var(--step-2) * -1)
-}
-
-.-m-700 {
-  margin: calc(var(--step-3) * -1)
-}
-
-.-m-800 {
-  margin: calc(var(--step-4) * -1)
-}
-
-.-m-900 {
-  margin: calc(var(--step-5) * -1)
-}
-
-.-m-1000 {
-  margin: calc(var(--step-5) * 2 * -1)
 }
 
 .my-0 {
@@ -428,106 +256,6 @@
 .mx-auto {
   margin-left: auto;
   margin-right: auto
-}
-
-.-my-100 {
-  margin-top: calc(var(--step--3) * -1);
-  margin-bottom: calc(var(--step--3) * -1)
-}
-
-.-mx-100 {
-  margin-left: calc(var(--step--3) * -1);
-  margin-right: calc(var(--step--3) * -1)
-}
-
-.-my-200 {
-  margin-top: calc(var(--step--2) * -1);
-  margin-bottom: calc(var(--step--2) * -1)
-}
-
-.-mx-200 {
-  margin-left: calc(var(--step--2) * -1);
-  margin-right: calc(var(--step--2) * -1)
-}
-
-.-my-300 {
-  margin-top: calc(var(--step--1) * -1);
-  margin-bottom: calc(var(--step--1) * -1)
-}
-
-.-mx-300 {
-  margin-left: calc(var(--step--1) * -1);
-  margin-right: calc(var(--step--1) * -1)
-}
-
-.-my-400 {
-  margin-top: calc(var(--step-0) * -1);
-  margin-bottom: calc(var(--step-0) * -1)
-}
-
-.-mx-400 {
-  margin-left: calc(var(--step-0) * -1);
-  margin-right: calc(var(--step-0) * -1)
-}
-
-.-my-500 {
-  margin-top: calc(var(--step-1) * -1);
-  margin-bottom: calc(var(--step-1) * -1)
-}
-
-.-mx-500 {
-  margin-left: calc(var(--step-1) * -1);
-  margin-right: calc(var(--step-1) * -1)
-}
-
-.-my-600 {
-  margin-top: calc(var(--step-2) * -1);
-  margin-bottom: calc(var(--step-2) * -1)
-}
-
-.-mx-600 {
-  margin-left: calc(var(--step-2) * -1);
-  margin-right: calc(var(--step-2) * -1)
-}
-
-.-my-700 {
-  margin-top: calc(var(--step-3) * -1);
-  margin-bottom: calc(var(--step-3) * -1)
-}
-
-.-mx-700 {
-  margin-left: calc(var(--step-3) * -1);
-  margin-right: calc(var(--step-3) * -1)
-}
-
-.-my-800 {
-  margin-top: calc(var(--step-4) * -1);
-  margin-bottom: calc(var(--step-4) * -1)
-}
-
-.-mx-800 {
-  margin-left: calc(var(--step-4) * -1);
-  margin-right: calc(var(--step-4) * -1)
-}
-
-.-my-900 {
-  margin-top: calc(var(--step-5) * -1);
-  margin-bottom: calc(var(--step-5) * -1)
-}
-
-.-mx-900 {
-  margin-left: calc(var(--step-5) * -1);
-  margin-right: calc(var(--step-5) * -1)
-}
-
-.-my-1000 {
-  margin-top: calc(var(--step-5) * 2 * -1);
-  margin-bottom: calc(var(--step-5) * 2 * -1)
-}
-
-.-mx-1000 {
-  margin-left: calc(var(--step-5) * 2 * -1);
-  margin-right: calc(var(--step-5) * 2 * -1)
 }
 
 .mt-0 {
@@ -722,168 +450,12 @@
   margin-left: auto
 }
 
-.-mt-100 {
-  margin-top: calc(var(--step--3) * -1)
-}
-
-.-mr-100 {
-  margin-right: calc(var(--step--3) * -1)
-}
-
-.-mb-100 {
-  margin-bottom: calc(var(--step--3) * -1)
-}
-
-.-ml-100 {
-  margin-left: calc(var(--step--3) * -1)
-}
-
-.-mt-200 {
-  margin-top: calc(var(--step--2) * -1)
-}
-
-.-mr-200 {
-  margin-right: calc(var(--step--2) * -1)
-}
-
-.-mb-200 {
-  margin-bottom: calc(var(--step--2) * -1)
-}
-
-.-ml-200 {
-  margin-left: calc(var(--step--2) * -1)
-}
-
-.-mt-300 {
-  margin-top: calc(var(--step--1) * -1)
-}
-
-.-mr-300 {
-  margin-right: calc(var(--step--1) * -1)
-}
-
-.-mb-300 {
-  margin-bottom: calc(var(--step--1) * -1)
-}
-
-.-ml-300 {
-  margin-left: calc(var(--step--1) * -1)
-}
-
-.-mt-400 {
-  margin-top: calc(var(--step-0) * -1)
-}
-
-.-mr-400 {
-  margin-right: calc(var(--step-0) * -1)
-}
-
-.-mb-400 {
-  margin-bottom: calc(var(--step-0) * -1)
-}
-
-.-ml-400 {
-  margin-left: calc(var(--step-0) * -1)
-}
-
-.-mt-500 {
-  margin-top: calc(var(--step-1) * -1)
-}
-
-.-mr-500 {
-  margin-right: calc(var(--step-1) * -1)
-}
-
-.-mb-500 {
-  margin-bottom: calc(var(--step-1) * -1)
-}
-
-.-ml-500 {
-  margin-left: calc(var(--step-1) * -1)
-}
-
-.-mt-600 {
-  margin-top: calc(var(--step-2) * -1)
-}
-
-.-mr-600 {
-  margin-right: calc(var(--step-2) * -1)
-}
-
-.-mb-600 {
-  margin-bottom: calc(var(--step-2) * -1)
-}
-
-.-ml-600 {
-  margin-left: calc(var(--step-2) * -1)
-}
-
-.-mt-700 {
-  margin-top: calc(var(--step-3) * -1)
-}
-
-.-mr-700 {
-  margin-right: calc(var(--step-3) * -1)
-}
-
-.-mb-700 {
-  margin-bottom: calc(var(--step-3) * -1)
-}
-
-.-ml-700 {
-  margin-left: calc(var(--step-3) * -1)
-}
-
-.-mt-800 {
-  margin-top: calc(var(--step-4) * -1)
-}
-
-.-mr-800 {
-  margin-right: calc(var(--step-4) * -1)
-}
-
-.-mb-800 {
-  margin-bottom: calc(var(--step-4) * -1)
-}
-
-.-ml-800 {
-  margin-left: calc(var(--step-4) * -1)
-}
-
-.-mt-900 {
-  margin-top: calc(var(--step-5) * -1)
-}
-
-.-mr-900 {
-  margin-right: calc(var(--step-5) * -1)
-}
-
-.-mb-900 {
-  margin-bottom: calc(var(--step-5) * -1)
-}
-
-.-ml-900 {
-  margin-left: calc(var(--step-5) * -1)
-}
-
-.-mt-1000 {
-  margin-top: calc(var(--step-5) * 2 * -1)
-}
-
-.-mr-1000 {
-  margin-right: calc(var(--step-5) * 2 * -1)
-}
-
-.-mb-1000 {
-  margin-bottom: calc(var(--step-5) * 2 * -1)
-}
-
-.-ml-1000 {
-  margin-left: calc(var(--step-5) * 2 * -1)
-}
-
 .max-w-none {
   max-width: none
+}
+
+.max-w-measure {
+  max-width: var(--measure)
 }
 
 .max-w-long {
@@ -1258,40 +830,4 @@
 
 .text-hotpink {
   color: var(--hotpink)
-}
-
-.text-grey-100 {
-  color: var(--grey-100)
-}
-
-.text-grey-200 {
-  color: var(--grey-200)
-}
-
-.text-grey-300 {
-  color: var(--grey-300)
-}
-
-.text-grey-400 {
-  color: var(--grey-400)
-}
-
-.text-grey-500 {
-  color: var(--grey-500)
-}
-
-.text-grey-600 {
-  color: var(--grey-600)
-}
-
-.text-grey-700 {
-  color: var(--grey-700)
-}
-
-.text-grey-800 {
-  color: var(--grey-800)
-}
-
-.text-grey-900 {
-  color: var(--grey-900)
 }
