--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,506 +1,49 @@
-@import 'config';
-
-/*
- * GLOBAL
+/**
+ * Settings
  */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  max-width: var(--measure-long);
-  margin: 0;
-  padding: 0;
-  color: inherit;
-  font-family: inherit;
-  font-size: inherit;
-}
+@import 'settings.config';
 
-body {
-  min-height: 100vh;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  background: #cde8e3 url('/images/bg-body.jpg') top / contain no-repeat;
-  color: var(--near-black);
-  font-family: var(--sans-serif);
-  font-size: var(--size-400);
-  line-height: var(--line-height-copy);
-}
+/**
+ * Generic
+ */
+@import 'generic.reset';
 
-[href="#main"] {
-  position: absolute;
-  top: -4rem;
-  display: block;
-  width: 100%;
-  max-width: none;
-  margin-top: 0;
-  padding: 0.75rem;
-  background-color: #000;
-  color: var(--near-white);
-  text-align: center;
-  z-index: 1;
-}
+/**
+ * Elements
+ */
+@import 'elements.base';
 
-[href="#main"]:focus {
-  top: 0;
-  outline: none;
-}
-
-// main * + * {
-//   margin-top: $flow; 
-// }
-
-//body,
-//li + li,
-//[hidden] + * {
-//  margin-top: 0;
-//}
-
-//p + p {
-//  margin-top: $s0;
-//}
-
-//:focus:not([tabindex="-1"]) {
-//  outline: 4px solid #999;
-//}
-
-///* fix for IE :( */
-//[tabindex="-1"]:focus,
-//div:not([tabindex]):focus {
-//  outline: none;
-//}
-
-[href] {
-  text-decoration-color: var(--cyan);
-  text-decoration-thickness: 4px;
-
-  &:hover,
-  &:focus {
-    color: var(--primary-color);
-    text-decoration: none;
-  }
-}
-
-img {
-  display: block;
-  max-width: 100%;
-}
-
-svg {
-  width: 0.75em;
-  height: 0.75em;
-  vertical-align: baseline;
-}
-
-[hidden] {
-  display: none;
-}
-
-
-//[role="contentinfo"] {
-//  padding-bottom: $s1;
-//  text-align: center;
-//}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--serif);
-  font-size: var(--size-500);
-  font-weight: 600;
-  line-height: var(--line-height-title);
-}
-
-//h1,
-//.h1 {
-//  font-size: $s3;
-//  font-style: normal;
-//}
-
-//h2,
-//.h2 {
-//  font-size: $s2;
-//  font-style: normal;
-//}
-
-//h3,
-//.h3 {
-//  font-size: $s1;
-//  font-style: italic;
-//}
-
-//h4,
-//.h4 {
-//  font-size: $s0;
-//}
-
-//h5,
-//.h5 {
-//  font-size: 0.85rem;
-//  text-transform: uppercase;
-//}
-
-//article h1 + *,
-//article h2 + *,
-//article h3 + *,
-//article h4 + *,
-//article h5 + *,
-//article h6 + * {
-//  margin-top: $s1;
-//}
-
-//article header + * {
-//  margin-top: $s4 * 2;
-//}
-
-//article header {
-//  display: flex;
-//  flex-direction: column;
-//}
-
-//article time {
-//  order: -1;
-//  margin-top: 0;
-//  margin-bottom: $s5;
-//}
-strong,
-b {
-  font-weight: 600;
-}
-
-time {
-  color: var(--light-grey);
-  font-style: italic;
-}
-
-pre {
-  overflow-x: auto;
-  padding: var(--step-0);
-  border: 1px solid;
-}
-
-pre * + * {
-  margin-top: 0;
-}
-
-code {
-  padding-left: 4px;
-  padding-right: 4px;
-  font-size: 0.7em;
-  font-family: var(--mono);
-  word-break: break-word;
-  hyphens: manual;
-}
-
-ul,
-ol { list-style: none; }
-
-ol { counter-reset: my-counter; }
-
-ul ul, 
-ol ol {
-  margin-top: 0.5rem;
-}
-
-ul:not([class]) li,
-ol:not([class]) li {
-  position: relative;
-  padding-left: var(--step--1);
-}
-
-ul:not([class]) li {
-  padding-left: var(--step--2);
-}
-
-ol:not([class]) li {
-  padding-left: 1.15rem;
-  position: relative;
-  counter-increment: my-counter;
-}
-
-ul:not([class]) li + li,
-ol:not([class]) li + li {
-    margin-top: var(--step--2);
-}
-
-ul:not([class]) li::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0.65em;
-  display: block;
-  width: 8px;
-  height: 2px;
-  background-color: var(--primary-color);
-}
-
-ol:not([class]) li::before {
-  content: counter(my-counter) ". ";
-  position: absolute;
-  left: 0;
-  color: var(--primary-color);
-}
-
-//blockquote {
-//  position: relative;
-//  // font-style: italic;
-//  quotes: "“" "”";
-//  padding: 1rem;
-//  background-color: rgba(var(--primary-color), 0.1);
-//}
-
-//blockquote::before {
-//  content: open-quote;
-//  position: absolute;
-//  top: -0.75rem;
-//  left: -0.15rem;
-//  color: var(--primary-color);
-//  font-size: 2em;
-//  line-height: 1;
-//}
-
-*::before,
-*::after,
-body,
-html,
-div,
-header,
-nav,
-main,
-section,
-article,
-svg,
-footer {
-  max-width: none;
-}
-
-main {
-  // margin-top: $s5;
-}
-
-* + * {
-  margin-top: var(--step-3);
-}
-
-p + p {
-  margin-top: 1em;
-} 
-
-p + ul,
-p + ol {
-  margin-top: var(--step--2);
-}
-
-h1 + *,
-h2 + *,
-h3 + *,
-h4 + *,
-h5 + *,
-h6 + * {
-  margin-top: 1em;
-}
-
-button {
-  padding: calc(var(--step--2) / 2);
-  border: 0;
-  border-radius: 0.2rem;
-  background-color: var(--dark);
-  color: var(--light);
-  font-family: var(--sans-serif);
-  font-size: var(--size-200);
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-
-button svg {
-  width: 0.75em;
-  height: 0.75em;
-  margin-top: 0;
-  vertical-align: baseline;
-  transform-origin: 0.38em 0.5em;
-}
-
-[aria-expanded] + * {
-  margin-top: var(--step--2);
-}
-
-// [aria-expanded="true"] svg {
-//   transform: rotate(180deg);
-// }
-
-/* Remove all animations and transitions for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
-  * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
-}
-
-
-
-/*
+/**
  * Objects
  */
-// @import "objects.layout";
 @import "objects.wrapper";
+@import "objects.stack";
 @import "objects.sidebar";
 @import "objects.full-bleed";
-@import "objects.cluster";
-// @import "objects.stack";
-// @import "objects.grids";
-// @import "objects.center";
-// @import "objects.page";
+//@import "objects.cluster";
+//// @import "objects.grids";
+//// @import "objects.page";
 
-
-
-/*
+/**
  * COMPONENTS
  */
 @import "components.siteheader";
 @import "components.sitefooter";
-// @import "components.primarynav";
-// @import "components.icons";
-@import "components.home";
-// @import "components.archive";
-@import "components.post";
-@import "components.tag";
-// @import "components.code-syntax-highlighting";
-// @import "components.codetitle";
 @import "components.underline";
-@import "components.preline";
 @import "components.cta";
+@import "components.home";
+@import "components.preline";
+//// @import "components.primarynav";
+//// @import "components.icons";
+//@import "components.archive";
+//@import "components.post";
+//@import "components.tease";
+//@import "components.tag";
+//// @import "components.code-syntax-highlighting";
+//// @import "components.codetitle";
 
-
-//.o-home-header > * {
-//  overflow: hidden
-//}
-//.o-home-header > * {
-//  display: flex;
-//  flex-wrap: wrap;
-//  align-items: flex-end;
-//  margin-right: calc(#{$s3} / 2 * -1);
-//  margin-left: calc(#{$s3} / 2 * -1);
-//}
-
-//.o-home-header > * > * {
-//  margin: calc(#{$s3} / 2);
-//  flex-grow: 1;
-//}
-
-//.o-home-header > * > :first-child {
-//  flex-basis: 0;
-//  flex-grow: 999;
-//  min-width: calc(70% - #{$s3});
-//}
-
-//.o-home-intro > * {
-//  overflow: hidden
-//}
-//.o-home-intro > * {
-//  display: flex;
-//  flex-wrap: wrap;
-//  margin-right: calc(#{$s0} / 2 * -1);
-//  margin-left: calc(#{$s0} / 2 * -1);
-//}
-
-//.o-home-intro > * > * {
-//  margin: calc(#{$s0} / 2);
-//  flex-grow: 1;
-//  flex-basis: 15rem;
-//}
-
-//.o-home-intro > * > :first-child {
-//  flex-basis: 0;
-//  flex-grow: 999;
-//  min-width: calc(50% - #{$s0});
-//}
-
-////.c-sitefooter {
-////  padding-bottom: 2em;
-////}
-
-//.c-page-heading {
-//  margin-right: 1rem;
-//}
-
-////.c-page-heading::before {
-////  content: '';
-////  display: inline-block;
-////  width: 10px;
-////  height: 2px;
-////  background-color: var(--primary-color);
-////  margin-left: -12px;
-////  margin-right: 2px;
-////}
-
-////.c-page-heading + * {
-////  margin-top: $spacing-flow;
-////}
-
-//.c-tease-group-heading {
-//  font-size: 1rem;
-//  text-align: right;
-//}
-
-////.c-tease-group-heading + * {
-////  margin-top: $spacing-flow;
-////}
-
-//.c-tease > header + * {
-//  margin-top: $s1;
-//}
-
-//.c-tease__heading {
-//  font-size: 1.25rem;
-//  line-height: 1.4;
-//}
-
-//.c-tease__meta {
-//  margin-top: 0;
-//  // margin-top: $s-4;
-//  // font-size: 0.85em;
-//}
-
-//time {
-//  margin-right: 8px;
-//  color: #757474;
-//  font-style: italic;
-//}
-
-//.c-post header .c-tags {
-//  margin-top: 0.4rem;
-//}
-
-/*
- * DESIGN TOKENS
+/**
+ * Utilities
  */
-@import 'tokens';
-
-
-
-/*
- * UTILITIES
- */
-
-.visually-hidden {
- clip-path:inset(50%);
- height:1px;
- overflow:hidden;
- position:absolute;
- white-space:nowrap;
- width:1px
-}
-
-.display\:none { display: none; }
-
-.center {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.overflow\:hidden { overflow: hidden; }
+@import 'utilities.tokens';
+@import 'utilities.accessibility';
