--- a/src/scss/_objects.wrapper.scss
+++ b/src/scss/_objects.wrapper.scss
@@ -1,12 +1,14 @@
 .o-wrapper {
-  max-width: var(--max-width);
+  max-width: 87.5rem;
   margin-left: auto;
   margin-right: auto;
-  padding: 0 var(--step--2);
+  padding-left: var(--step--2);
+  padding-right: var(--step--2);
 }
 
 @media (min-width: 48rem) {
   .o-wrapper {
-    padding: 0 var(--step-5);
+    padding-left: var(--step-5);
+    padding-right: var(--step-5);
   }
 }
