--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,49 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Matthew Passmore: {{ title }}</title>
+    <title>Matthew Passmore | {{ home.strapline }}</title>
     <link rel="alternate" href="/feed/writing.xml" title="Matthew Passmore's writing" type="application/atom+xml">
 
-    <link
-    href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,500,600|Source+Sans+Pro:400,400i,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400i,500,600,800|Source+Sans+Pro:400,400i,600,700&display=swap" rel="stylesheet">
     <style>{% include 'css/main.css' %}</style>
 
     <!-- DETECT JS -->
     <script>document.documentElement.className = document.documentElement.className.replace("no-js","js");</script>
   </head>
 
-  <body class="[ max-width:none ]" data-controller="{{ controller }}" data-action="{{ action }}">
+  <body class="pt-500" data-controller="{{ controller }}" data-action="{{ action }}">
     {% include "partials/icon-sprite.njk" %}
 
     <div class="o-wrapper">
     
       <a href="#main">Skip to content</a>
 
-      <header class="[ c-siteheader ] [ o-sidebar ] [ mt-0]">
+      <header class="c-siteheader">
 
-        <div class="o-sidebar__inner">
+        <div>
 
+          <!-- BRANDING -->
+          <div class="c-siteheader__brand">
+            <p class="text-600 font-serif leading-none"><a href="/">Matthew Passmore</a></p>
+            <p>Website strategy &amp; development</p>
+          </div><!-- .c-siteheader__brand -->
+          
+          
           <!-- NAVIGATION -->
           <nav class="c-siteheader__nav">
-            <ul class="list-reset max-w-none">
-              <li class="font-serif font-semibold text-600">
-                <a class="c-underline" href="/contact/">
+            <ul class="list-reset">
+              <li class="font-semibold font-serif text-500">
+                <a class="c-underline" href="mailto:{{ site.email }}">
                   Let's talk
                   <svg class="text-hotpink"><use xlink:href="#icon-chat"></use></svg>
                 </a>
               </li>
+              <!--
               <li><a href="#about">About</a></li>
-              <li><a href="/contact/">Contact</a></li>
-              <li><a href="/notes/">Writing</a></li>
+              <li><a href="mailto:{{ site.email }}">Contact</a></li>
+              <li><a href="/writing/">Writing</a></li>
+              -->
             </ul>
           </nav>
 
-          <!-- INTRO -->
-          <div class="[ c-siteheader__intro ] [ max-w-short ] [ text-500 ]">
-            {{ site.intro | markdownFilter | safe }}
-          </div><!-- .c-siteheader__intro -->
-          
-        </div><!-- .o-sidebar__inner -->
+        </div>
 
       </header><!-- .c-siteheader -->
 
@@ -60,9 +63,9 @@
 
 
       <!-- CALL-TO-ACTION -->
-      <aside class="[ c-cta ] [ max-w-short center mt-1000 py-400 ]">
+      <aside class="[ c-cta ] [ max-w-short mt-900 mx-auto py-400 ]">
         <h3 class="[ c-cta__heading ] [ text-700 ]">{{ site.cta.heading }}</h3> 
-        <div class="[ c-cta__subheading ] [ mt-0 ] [ text-600 ]">
+        <div class="[ c-cta__subheading ] [ text-600 ]">
           {{ site.cta.subheading | markdownFilter | safe }} 
         </div><!-- .c-cta__subheading -->
         <a class="[ c-underline ] [ mt-300 ] [ font-serif font-semibold text-600 ]" href="{{ site.cta.linkTarget }}">{{ site.cta.linkText }}</a>
@@ -71,14 +74,16 @@
 
       <!-- FOOTER -->
       <footer class="[ c-sitefooter ] [ mt-900 ]">
+        {#
         <div class="[ c-sitefooter__nav ] [ o-full-bleed ] ">
-          <ul class="[ list-reset max-w-none ] [ font-semibold ]">
+          <ul class="[ list-reset font-semibold ]">
             <li><a href="#about">About</a></li>
-            <li><a href="/contact/">Contact</a></li>
-            <li><a href="/notes/">Writing</a></li>
+            <li><a href="mailto:{{ site.email }}">Contact</a></li>
+            <li><a href="/writing/">Writing</a></li>
             <li><a href="/feed/writing.xml">RSS</a></li>
           </ul>
         </div><!-- .c-sitefooter__nav -->
+        #}
         <div class="[ c-sitefooter__location ] [ mt-400 ] [ font-serif italic ]">
           <span>Made with love</span> 
           <span>&nbsp;in Cardiff, Wales</span>
