feat (accessibility): bring html up-to-scratch with css disabled

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -38,7 +38,7 @@
               <li class="font-semibold font-serif text-500">
                 <a class="c-underline" href="mailto:{{ site.email }}">
                   Let's talk
-                  <svg class="text-hotpink"><use xlink:href="#icon-chat"></use></svg>
+                  <svg class="text-hotpink" width="23" height="23" aria-hidden="true"><use xlink:href="#icon-chat"></use></svg>
                 </a>
               </li>
               <!--
@@ -64,7 +64,7 @@
 
       <!-- CALL-TO-ACTION -->
       <aside class="[ c-cta ] [ max-w-short mt-900 mx-auto py-400 ]">
-        <h3 class="[ c-cta__heading ] [ text-700 ]">{{ site.cta.heading }}</h3> 
+        <h2 class="[ c-cta__heading ] [ text-700 ]">{{ site.cta.heading }}</h2> 
         <div class="[ c-cta__subheading ] [ text-600 ]">
           {{ site.cta.subheading | markdownFilter | safe }} 
         </div><!-- .c-cta__subheading -->
