--- a/src/_includes/partials/icon-sprite.njk
+++ b/src/_includes/partials/icon-sprite.njk
@@ -1,4 +1,4 @@
-<svg class="display:none">
+<svg class="display:none" width="0" height="0">
 
   <!-- LOGO -->
   <symbol id="logo" viewBox="0 0 38 16">
