--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,14 +33,14 @@
 @import "components.cta";
 @import "components.home";
 @import "components.preline";
+@import "components.code-syntax-highlighting";
+@import "components.codetitle";
+@import "components.post";
 //// @import "components.primarynav";
 //// @import "components.icons";
 //@import "components.archive";
-//@import "components.post";
 //@import "components.tease";
 //@import "components.tag";
-//// @import "components.code-syntax-highlighting";
-//// @import "components.codetitle";
 
 /**
  * Utilities
