--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -2,10 +2,15 @@
 layout: layouts/base.njk
 ---
 
-<article class="c-post">
-  <header class="max-w-long mx-auto">
-    <h1 class="[ c-preline ] [ text-700 ]">{{ title }}</h1>
+<article class="[ c-post ] [ max-w-long mt-700 mx-auto ]">
+
+  <header>
+
+    <h1>{{ title }}</h1>
     <time datetime="{{ date | w3DateFilter }}">{{ date | dateFilter }}</time>
+
+    <!-- TAGS -->
+    {#
     <div class="[ c-post__tags ] [ mt-300 ]">
       <p class="italic">Posted in&nbsp;&mdash;&nbsp;</p>
       <div class="[ o-cluster ] [ mt-0 ]">
@@ -15,8 +20,13 @@ layout: layouts/base.njk
         </ul>
       </div>
     </div>
+    #}
+
   </header>
-  <div class="max-w-long mt-900 mx-auto">
+
+  <!-- CONTENT -->
+  <div class="o-stack mt-700">
     {{ content | safe }}
   </div>
+
 </article>
