--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,11 +35,11 @@
 @import "components.preline";
 @import "components.code-syntax-highlighting";
 @import "components.codetitle";
+@import "components.archive";
+@import "components.tease";
 @import "components.post";
 //// @import "components.primarynav";
 //// @import "components.icons";
-//@import "components.archive";
-//@import "components.tease";
 //@import "components.tag";
 
 /**
