--- a/src/scss/_components.archive.scss
+++ b/src/scss/_components.archive.scss
@@ -1,28 +1,7 @@
-.c-archive {
-  max-width: var(--measure);
+.c-archive__heading {
+  text-align: center;
 }
 
-.c-archive__header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  max-width: var(--measure);
-}
-
-.c-archive__header > :last-child {
-  flex-basis: 100%;
-}
-
-.c-archive__subtitle {
-  color: var(--primary-color);
-  font-size: var(--step--1);
-}
-
-.c-archive article + .c-archive__subtitle {
-  margin-top: var(--step-5);
-}
-
-.c-archive article {
-  padding-left: var(--step-0);
+.c-archive__list {
+  --flow-space: var(--step-3);
 }
