--- a/src/scss/_components.post.scss
+++ b/src/scss/_components.post.scss
@@ -1,7 +1,8 @@
-// .c-post > header {
-//   display: flex;
-//   flex-direction: column;
-// }
+.c-post > header {
+  // display: flex;
+  // flex-direction: column;
+  text-align: center;
+}
 
 // .c-post > header time {
 //   order: -1;
