--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,7 @@
 ---
 layout: layouts/base.njk
 controller: home
+metaTitle: Matthew Passmore - Helping organisations develop and execute website strategy to thrive online
 ---
 
 <!-- INTRO -->
