--- a/src/writing.njk
+++ b/src/writing.njk
@@ -1,6 +1,7 @@
 ---
 layout: layouts/base.njk
 controller: archive
+title: Writing Archive
 ---
 
   <h1 class="[ c-archive__heading ] [ mt-700 ]">Writing</h1>
